syntax = "proto3";

package user.service.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// 角色权限覆盖
message RoleOverride {
  // 权限点覆盖
  message PermissionDelta {
    repeated string added_permissions = 1;   // 租户额外增加的权限
    repeated string removed_permissions = 2; // 租户明确禁用的权限（即便模板有，也禁用）
  }

  PermissionDelta permissions = 1;

  // 基础字段修改（如果为空则沿用模板）
  optional string display_name = 2;
  optional string description = 3;

  // 扩展配置
  map<string, string> extended_settings = 4; // 存储如 "ui_color": "#FF0000"

  // 策略覆盖
  message SecurityPolicy {
    bool force_mfa = 1;
    repeated string ip_allow_list = 2;
  }
  SecurityPolicy security_policy = 5;
}

// 角色元数据
message RoleMetadata {
  // 同步策略
  enum SyncPolicy {
    AUTO = 0;        // 自动同步
    MANUAL = 1;      // 手动同步
    BLOCKED = 2;     // 阻止同步
  }

  // 作用域
  enum Scope {
    PLATFORM = 0;     // 平台级
    TENANT = 1;       // 租户级
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "角色元数据ID"}
  ];  // 角色元数据ID

  optional uint32 role_id = 2 [
    json_name = "roleId",
    (gnostic.openapi.v3.property) = {description: "角色ID"}
  ];  // 角色ID

  optional bool is_template = 3 [
    json_name = "isTemplate",
    (gnostic.openapi.v3.property) = {description: "是否是模版"}
  ];  // 是否是模版

  optional string template_for = 4 [
    json_name = "templateFor",
    (gnostic.openapi.v3.property) = {description: "模板适用对象"}
  ];  // 模板适用对象

  optional int32 template_version = 5 [
    json_name = "templateVersion",
    (gnostic.openapi.v3.property) = {description: "模板版本号"}
  ];  // 模板版本号

  optional int32 last_synced_version = 6 [
    json_name = "lastSyncedVersion",
    (gnostic.openapi.v3.property) = {description: "上次同步的版本号"}
  ];  // 上次同步的版本号

  optional google.protobuf.Timestamp last_synced_at = 7 [
    json_name = "lastSyncedAt",
    (gnostic.openapi.v3.property) = {description: "最后同步时间"}
  ];  // 最后同步时间

  optional SyncPolicy sync_policy = 8 [
    json_name = "syncPolicy",
    (gnostic.openapi.v3.property) = {description: "同步策略"}
  ];  // 同步策略

  optional Scope scope = 9 [
    json_name = "scope",
    (gnostic.openapi.v3.property) = {description: "作用域"}
  ];  // 作用域

  RoleOverride custom_overrides = 10 [
    json_name = "customOverrides",
    (gnostic.openapi.v3.property) = {description: "租户自定义覆盖项"}
  ];  // 租户自定义覆盖项

  optional uint32 tenant_id = 20 [
    json_name = "tenantId",
    (gnostic.openapi.v3.property) = {description: "租户ID，0代表系统全局角色"}
  ];  // 租户ID，0代表系统全局角色

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者ID"}]; // 创建者ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者ID"}]; // 更新者ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}
